<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoMitsubishiRobotics_Config_v_1_x_x" Id="{a0162172-2f76-0323-03d8-634b61b59847}">
    <Declaration><![CDATA[TYPE TcoMitsubishiRobotics_Config_v_1_x_x : 
STRUCT
    InfoTime : TIME := T#2S;
    ErrorTime : TIME := T#0S;
    IpAddress : STRING;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>