<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoCr800_IO_v_1_x_x" Id="{ff5e6528-9a72-0dee-2131-d461ab0cdb10}">
    <Declaration><![CDATA[TYPE TcoCr800_IO_v_1_x_x : 
STRUCT
    PnIoBoxState AT %I* : UINT;
    PnIoBoxDiag AT %I* : UINT;
    PnIoBoxCtrl AT %Q* : UINT;
    {attribute addProperty Name "<#IN#>"}
    In : TcoCr800_Inputs_v_1_x_x;
    {attribute addProperty Name "<#OUT#>"}
    Out : TcoCr800_Outputs_v_1_x_x;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>